# trm-youtubevids

./: .gitignore  COMPILER_GYM_TROUBLESHOOTING.md  DEPENDENCY_HELL_ANALYSIS.md  README.md  README_trm_gemm.md  REAL_LLVM_SOLUTIONS.md  TRM_COLAB_GUIDE.md  TRM_COMPILER_TOOLS_DATASETS.md  TRM_Colab.ipynb  TRM_NEW_APPLICATIONS.md  TRM_REVIEW.md  benchmark_epochs.py  complete_run.ipynb  complete_run.py  kv_cache_research.md  kv_cache_research_cs.md  kv_cache_video.py  latex_check.py  llm_inference_script.md  local_llm_sources.md  paper_comparison.md  prepare.py  program.md  pyproject.toml  quantization_research.md  quantization_script.md  run_experiment.py  sample_manim.py  script.md  script_storyboard.md  train.py  trm_compiler_real_llvm.ipynb  trm_compiler_real_llvm.py  trm_compiler_synthetic.ipynb  trm_gemm_main.ipynb  weight_formats_sources.md  weight_formats_storyboard.md  weight_formats_video.py
tests/: test_trm_gemm.py
trm_compiler/: __init__.py  baselines.py  colab_smoke.py  data.py  debug_model.py  env_check.py  env_wrapper.py  eval_real_llvm.py  example.py  model.py  real_llvm_env.py  test_compilergym.py  test_pipeline.py  training.py  types.py
trm_compiler_output/: trm_model.pt
trm_experiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trm_gemm/: __init__.py  backend.py  baselines.py  colab_smoke.py  data.py  env_check.py  example.py  model.py  schedules.py  training.py  types.py
trm_output/: trm_model.pt
