[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trm-experiments"
version = "0.1.0"
description = "TRM-style tiny recursive reasoning networks for compiler and kernel optimization"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
]

[project.optional-dependencies]
env = ["gymnasium>=1.0"]
compiler = ["compiler_gym"]
all = ["gymnasium>=1.0", "compiler_gym"]

[tool.setuptools]
packages = ["trm_gemm", "trm_compiler"]
